--- a/ecomm/src/main/resources/application.properties
+++ b/ecomm/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-jwt.secret=]6J~R6*f{vP;6<TG*[G#@`d&K|nw&z%q*&}(~|3qc#zE#i`Go7zbaY(56N(Za%6
+jwt.secret=b28b2b4297d6673f0c604368d9b70028
 
 
 
