--- a/ecomm/src/main/resources/application.properties
+++ b/ecomm/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=ecommerce
 server.port=9000
 server.servlet.context-path=/ecommerce
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db?currentSchema=ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
 spring.datasource.username=postgres
 spring.datasource.password=anil5214991
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 jwt.secret=b28b2b4297d6673f0c604368d9b70028
 
