--- a/ecomm/src/main/resources/application.properties
+++ b/ecomm/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name=ecommerce
 
 server.servlet.context-path=/ecommerce
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
-spring.datasource.username=postgres
-spring.datasource.password=anil5214991
-server.port=9000
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+server.port=${PORT:8080}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-jwt.secret=b28b2b4297d6673f0c604368d9b70028
+jwt.secret=${JWT_SECRET}
 
 
 
