--- a/ecomm/src/main/resources/application.properties
+++ b/ecomm/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ecommerce
 
 server.servlet.context-path=/ecommerce
 
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 server.port=${PORT:8080}
